exports[`invalid(1): {\"main\": \"./index.js\"} 1`] = `

[Input]
  1 | {"main": "./index.js"}

`;

exports[`invalid(1): {\"main\": \"./index.js\"} 2`] = `

Message:
> 1 | {"main": "./index.js"}
    |  ^^^^^^ Define entry points through the \`exports\` field instead of \`main\`.

`;

exports[`invalid(2): {\"module\": \"./index.mjs\"} 1`] = `

[Input]
  1 | {"module": "./index.mjs"}

`;

exports[`invalid(2): {\"module\": \"./index.mjs\"} 2`] = `

Message:
> 1 | {"module": "./index.mjs"}
    |  ^^^^^^^^ Define entry points through the \`exports\` field instead of \`module\`.

`;

exports[`invalid(3): {\"browser\": \"./index.browser.js\"} 1`] = `

[Input]
  1 | {"browser": "./index.browser.js"}

`;

exports[`invalid(3): {\"browser\": \"./index.browser.js\"} 2`] = `

Message:
> 1 | {"browser": "./index.browser.js"}
    |  ^^^^^^^^^ Define entry points through the \`exports\` field instead of \`browser\`.

`;

exports[`invalid(4): {\"types\": \"./index.d.ts\"} 1`] = `

[Input]
  1 | {"types": "./index.d.ts"}

`;

exports[`invalid(4): {\"types\": \"./index.d.ts\"} 2`] = `

Message:
> 1 | {"types": "./index.d.ts"}
    |  ^^^^^^^ Define entry points through the \`exports\` field instead of \`types\`.

`;

exports[`invalid(5): {\"typings\": \"./index.d.ts\"} 1`] = `

[Input]
  1 | {"typings": "./index.d.ts"}

`;

exports[`invalid(5): {\"typings\": \"./index.d.ts\"} 2`] = `

Message:
> 1 | {"typings": "./index.d.ts"}
    |  ^^^^^^^^^ Define entry points through the \`exports\` field instead of \`typings\`.

`;

exports[`invalid(6): {\"exports\": \"./index.js\", \"main\": \"./index.js\"} 1`] = `

[Input]
  1 | {"exports": "./index.js", "main": "./index.js"}

`;

exports[`invalid(6): {\"exports\": \"./index.js\", \"main\": \"./index.js\"} 2`] = `

Message:
> 1 | {"exports": "./index.js", "main": "./index.js"}
    |                           ^^^^^^ Define entry points through the \`exports\` field instead of \`main\`.

`;

exports[`invalid(7): {\"main\": \"./index.js\", \"module\": \"./index.mjs\", \"types\": \"./index.d.ts\"} 1`] = `

[Input]
  1 | {"main": "./index.js", "module": "./index.mjs", "types": "./index.d.ts"}

`;

exports[`invalid(7): {\"main\": \"./index.js\", \"module\": \"./index.mjs\", \"types\": \"./index.d.ts\"} 2`] = `

Message:
> 1 | {"main": "./index.js", "module": "./index.mjs", "types": "./index.d.ts"}
    |  ^^^^^^ Define entry points through the \`exports\` field instead of \`main\`.

`;

exports[`invalid(7): {\"main\": \"./index.js\", \"module\": \"./index.mjs\", \"types\": \"./index.d.ts\"} 3`] = `

Message:
> 1 | {"main": "./index.js", "module": "./index.mjs", "types": "./index.d.ts"}
    |                        ^^^^^^^^ Define entry points through the \`exports\` field instead of \`module\`.

`;

exports[`invalid(7): {\"main\": \"./index.js\", \"module\": \"./index.mjs\", \"types\": \"./index.d.ts\"} 4`] = `

Message:
> 1 | {"main": "./index.js", "module": "./index.mjs", "types": "./index.d.ts"}
    |                                                 ^^^^^^^ Define entry points through the \`exports\` field instead of \`types\`.

`;
